completed slider with timing function, began home

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,8 +1,8 @@
 @import './config';
 
 .footer{
-    position: fixed;
-    bottom: 0;
+    // position: fixed;
+    // bottom: 0;
     @include flexCenter;
     justify-content: space-between;
     background: black;
