--- a/src/App.scss
+++ b/src/App.scss
@@ -2,8 +2,10 @@
 @import './scss/nav';
 @import './scss/hero';
 @import './scss/home';
+@import './scss/about';
+@import './scss/contact';
 @import './scss/footer';
 
 body{
-  background: rgb(230, 228, 228);
+  background: $lightgrey;
 }
