--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -1,5 +1,5 @@
-$green: rgb(7, 163, 7);
-$lightgrey: rgb(230, 228, 228);
+$green: rgb(3, 206, 3);
+$lightgrey: rgba(243, 243, 243, 0.877);
 
 *{
     box-sizing: border-box;
