--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -8,8 +8,8 @@
     background: black;
     color: white;
     width: 100%;
-    height: 80px;
-    padding: 0px 2.5%;
+    height: 150px;
+    padding: 30px 2.5%;
 
     .footer_left{
         width: 50%;
@@ -46,10 +46,10 @@
         a{
             margin-left: 15px;
             text-decoration: none;
-            color: $green;
+            color: white;
             font-weight: bolder;
             &:hover{
-                text-decoration: underline;
+                color: $green;
             }
         }
     }
