--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -12,7 +12,8 @@
         height: 100%;
 
         .slide{
-            min-width: 100%;
+            background: $lightgrey;
+            width: 100vw;
             height: 100%;
             @include flexCenter;
             flex-direction: column;
@@ -89,12 +90,23 @@
             img{
                 position: absolute;
                 left: 50%;
-                bottom: 45px;
+                bottom: 47.5px;
                 transform: translateX(-50%);
-                width: 80px;
-                height: 30px;
+                width: 55px;
+                height: 20px;
                 cursor: pointer;
             }
         }
+    }
+}
+
+[data-aos="new-animation"] {
+    opacity: 0;
+    transform: translateY(-50px);
+    transition: all ease-in-out .25s;
+
+    &.aos-animate {
+        opacity: 1;
+        transform: translateY(0px);
     }
 }
