--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -1,17 +1,24 @@
 @import './config';
 
 
-.home_about{
+.difference{
+    margin: 30px auto;
+    text-align: center;
+}
+
+.home_about, .home_houses, .home_apartments{
     @include flexCenter;
-    width: 100%;
-    max-width: 750px;
-    margin: 50px auto;
-    padding: 10px;
+    width: 95%;
+    max-width: 1200px;
+    margin: 0px auto;
+
     img{
         width: 50%;
         height: 100%;
+        max-height: 375px;
     }
     div{
+        width: 50%;
         padding: 20px;
         h2{
             font-size: 25px;
@@ -33,48 +40,13 @@
             text-decoration: none;
             margin-right: 5px;
             margin-top: 5px;
-        }
-    }
-}
-
-.houses_apartments_container{
-    padding: 10px;
-    @include flexCenter;
-    flex-wrap: wrap;
-
-    .home_houses, .home_apartments{
-        width: 50%;
-        @include flexCenter;
-        align-items: flex-start;
-        border: 1px solid black;
-
-        img{
-            width: 50%;
-            height: 150px;
-        }
-        div{
-            padding-left: 10px;
-            h2{
-                font-size: 25px;
-            }
-            p{
-                font-size: 15px;
-                text-align: justify;
-                margin: 10px 0px;
-            }
-            button{
-                font-size: 15px;
-                padding: 5px;
-                background: black;
-                color: white;
-                height: 40px;
-                border-radius: 5px;
-                outline: none;
-                border: none;
-                text-decoration: none;
-                margin-right: 5px;
-                margin-top: 5px;
+            cursor: pointer;
+            
+            &:hover{
+                color: $green;
             }
         }
     }
 }
+
+
