--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -8,7 +8,7 @@
     width: 100%;
     margin: 0px auto;
     padding: 0px 2.5%;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.377);
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.116);
     @include flexCenter;
     justify-content: space-between;
 
@@ -78,7 +78,7 @@
 }
 
 .links_container{
-    position: absolute;
+    position: fixed;
     z-index: 1;
     background: black;
     top: -100vh;
@@ -92,20 +92,25 @@
     
     a{
         transform: translateX(100vw);
-        @include transition_ease;
-        margin: 5vh auto;
+        transition: transform 0.5s ease-in-out;
+        margin: 10vh auto;
+        margin-top: 0px;
         font-size: 20px;
         color: $green;
         text-decoration: none;
         font-weight: bolder;
-
+        color: white;
     }
     
     &.open{
         top: 65px;
+        height: 100%;
         
         a{
             transform: translateX(0);
+            &:hover{
+                color: $green;
+            }
         }
     }
     
@@ -118,18 +123,21 @@
         width: unset;
 
         a{
+            margin: unset;
             transform: translateX(0);
-            margin-left: 2.5vw;
+            margin-left: 5vw;
             transition: none;
+            color: black;
+            font-size: 17.5px;
 
             &:hover{
-                text-decoration: underline;
+                color: $green;
             }
         }
     }
 }
 
-@for $i from 1 through 3 {
+@for $i from 1 through 4 {
     .links_container a:nth-child(#{$i}) {
         transition-delay: ($i * 0.1s) + 0.25s;
     }
