added images/data, started house and apartments p

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
 @import './scss/hero';
 @import './scss/home';
 @import './scss/about';
+@import './scss/houses';
 @import './scss/contact';
 @import './scss/footer';
 
