--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -29,7 +29,9 @@
         padding-bottom: 10px;
         width: 95%;
         max-width: 450px;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+        box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.2);
+        border-bottom: 3px solid $green;
+
 
         h2{
             text-align: center;
