--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -8,7 +8,7 @@
 
 .about_intro, .tech_difference, .agents_difference{
     width: 95%;
-    max-width: 950px;
+    max-width: 850px;
     margin: 20px auto;
 
     .image_container{
@@ -32,6 +32,7 @@
             height: 100%; 
             object-position: top;
             background: lightgrey;
+            border-radius: 2.5px;
         }
     }
 
