--- a/src/scss/_houses.scss
+++ b/src/scss/_houses.scss
@@ -1,10 +1,5 @@
 @import './config';
 
-.full_page{
-    padding-top: 65px;
-    min-height: calc(100vh - 150px)
-}
-
 .filter_container{
     @include flexCenter;
     margin: 40px auto;
@@ -139,12 +134,18 @@
     text-align: center;
 }
 
+.no_results{
+    margin-top: 50px;
+}
+
 .home_container{
     @include flexCenter;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     width: 98%;
-    max-width: 1200px;
+    max-width: 1100px;
     margin: 10px auto;
+    margin-bottom: 75px;
 
     .property{
         background: white;
@@ -184,6 +185,21 @@
         .property_stats{
             width: 100%;
             padding: 10px;
+
+            h4{
+                font-size: 25px;
+            }
+
+            p{
+                margin: 2.5px 0px;
+                font-size: 16.5px;
+
+                &:nth-of-type(2){
+                    font-size: 12.5px;
+                    margin-top: 1.5px;
+                    margin-bottom: 0px;
+                }
+            }
         }
     }
 }
