--- a/src/scss/_modals.scss
+++ b/src/scss/_modals.scss
@@ -11,9 +11,7 @@
         display: none;
 
         &.open {
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            @include flexCenter;
             position: fixed;
             top: 0px;
             left: 0px;
@@ -45,139 +43,211 @@
 
                     span{
                         position: absolute;
-                        left: 5px;
+                        left: 15px;
+                        font-size: 17.5px;
                         top: 50%;
                         transform: translateY(-50%);
                         cursor: pointer;
                     }
                 }
-                .property_info{
+                
 
-                    padding: 15px;
-
-                    h1{
-                        font-size: 25px;
-
+                    .property_info{
+    
+                        padding: 15px;
+    
+                        h1{
+                            font-size: 25px;
+    
+                            span{
+                                display: inline-block;
+                                font-size: 15px;
+                                font-weight: normal;
+                                margin-left: 5px;
+    
+                                span{
+                                    color: lightgrey;
+                                    margin-left: 0px;
+                                }
+                            }
+                        }
+    
                         h3{
-                            display: inline-block;
                             font-size: 15px;
                             font-weight: normal;
-                            margin-left: 5px;
-
-                            span{
-                                color: lightgrey;
-                            }
+                            margin: 2.5px 0px; 
                         }
-                    }
-
-                    h3{
-                        font-size: 15px;
-                        font-weight: normal;
-                        margin: 2.5px 0px; 
-                    }
-
-                    a{
-                        text-decoration: none;
-                        button{
-                            display: inline-block;
-                            margin: 10px auto;
-                            margin-bottom: 30px;
-                            background: white;
-                            color: black;
-                            border: 3px solid $green;
-                            outline: none;
-                            cursor: pointer;
-                            font-weight: bolder;
-                            font-size: 17.5px;
-                            padding: 5px;
-                            border-radius: 2.5px;
     
-                            &:hover{
-                                background: $green;
-                                color: white;
-                            }
-                        }
-                    }
-
-                    .more_details_header{
-                        width: 100%;
-                        border-bottom: 1px solid lightgrey;
-
-                        button{
-                            background: white;
-                            outline: none;
-                            border: none;
-                            padding: 5px;
-                            cursor: pointer;
-                            margin-bottom: -1px;
-
-                            &.active{
-                                border-bottom: 3px solid $green;
+                        a{
+                            text-decoration: none;
+                            button{
+                                display: inline-block;
+                                margin: 10px auto;
+                                margin-bottom: 20px;
+                                background: white;
+                                color: black;
+                                border: 3px solid $green;
+                                outline: none;
+                                cursor: pointer;
                                 font-weight: bolder;
+                                font-size: 17.5px;
+                                padding: 5px;
+                                border-radius: 2.5px;
+        
+                                &:hover{
+                                    background: $green;
+                                    color: white;
+                                }
                             }
                         }
-                    }
-
-                    .more_details{
-                        p{
-                            font-size: 17.5px;
-                            margin: 15px;
-                        }
-
-                        .features_flex{
-                            margin-top: 10px;
-                            @include flexCenter;
-                            flex-wrap: wrap;
-                            justify-content: space-evenly;
-
-                            span{
-                                border: 1px solid lightgrey;
-                                padding: 2.5px;
-                                border-radius: 2.5px;
-                                margin: 5px;
-
-                                .feature{
-                                    border: none;
+    
+                        .more_details_header{
+                            width: 100%;
+                            border-bottom: 1px solid lightgrey;
+                            border-top: 1px solid lightgrey;
+    
+                            button{
+                                background: white;
+                                outline: none;
+                                border: none;
+                                padding: 5px;
+                                padding-top: 8px;
+                                cursor: pointer;
+                                margin-bottom: -1px;
+    
+                                &.active{
+                                    border-bottom: 3px solid $green;
                                     font-weight: bolder;
-                                    padding: 0px;
+                                }
+                            }
+                        }
+    
+                        .more_details{
+                            p{
+                                font-size: 17.5px;
+                                margin: 15px;
+                            }
+    
+                            .features_flex{
+                                margin-top: 10px;
+                                @include flexCenter;
+                                flex-wrap: wrap;
+                                justify-content: space-evenly;
+    
+                                span{
+                                    border: 1px solid lightgrey;
+                                    padding: 2.5px;
+                                    border-radius: 2.5px;
+                                    margin: 5px;
+    
+                                    .feature{
+                                        border: none;
+                                        font-weight: bolder;
+                                        padding: 0px;
+                                    }
                                 }
                             }
                         }
                     }
-                }
-
-                .property_images{               
-                    position: relative;
-                    width: 100%;
-                    overflow: hidden;
-                    height: 70vw;
-                    max-height: 325px;
-                    
-                    .property_flex{
-                        height: 100%;
+    
+                    .property_images{               
+                        position: relative;
                         width: 100%;
-                        position: absolute;
-                        right: 0;
-                        top: 0;
-                        overflow-x: scroll;
-                        @include flexCenter;
-                        justify-content: flex-start;
+                        overflow: hidden;
+                        height: 70vw;
+                        max-height: 325px;
                         
-                        img{
-                            width: 90%; 
-                            height: 100%; 
-                            background: lightgrey;
-                            cursor: pointer;
-                            margin-right: 1%;
+                        .property_flex{
+                            height: 100%;
+                            width: 100%;
+                            position: absolute;
+                            right: 0;
+                            top: 0;
+                            overflow-x: scroll;
+                            overflow-y: hidden;
+                            @include flexCenter;
+                            justify-content: flex-start;
+                            
+                            img{
+                                width: 90vw; 
+                                height: 100%; 
+                                background: lightgrey;
+                                cursor: pointer;
+                                margin-right: 1%;
+                            }
                         }
+                            
+                    
                     }
-                        
-                
+                    
                 }
+            
+        }
+    }
+}
+
+.property_major_flex{
+    @media screen and (min-width: 800px){
+        width: 100%;
+        display: flex;
+        min-height: calc(100vh - 65px);
+        .property_images2{               
+            width: 60%;
+            
+            .property_flex2{
+                width: 100%;
+                height: calc(100vh - 65px);
+                display: flex;
+                flex-direction: column;
+                overflow-y: scroll;
+
+                img{
+                    width: 100%;
+                    height: 50%;
+                    cursor: pointer;
+                }
+            }
+                
+        
+        }
+
+        .property_info{
+            width: 40%;
+            height: calc(100vh - 65px);
+
+            h1{
+                font-size: 15px;
+
+                span{
+                    display: inline-block;
+                    font-size: 20px;
+                    font-weight: normal;
+                    margin-left: 5px;
+
+                    span{
+                        color: lightgrey;
+                        margin-left: 0px;
+                    }
+                }
+            }
+
+            h3{
+                font-size: 17.5px;
+                font-weight: normal;
+                margin: 2.5px 0px; 
+            }
+
+            .more_details .features_flex{
+                margin-top: 50px;
+                @include flexCenter;
+                flex-wrap: unset;
+                justify-content: flex-start;
             }
         }
     }
 }
+
+
 
 //2. Featured Image Modal
 
