--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -26,11 +26,15 @@
         background: white;
         border-radius: 2.5px;
         min-width: 250px;
+        max-width: 500px;
         padding-bottom: 10px;
-        width: 95%;
-        max-width: 450px;
+        width: 100%;
         box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.2);
         border-bottom: 3px solid $green;
+
+        @media screen and (min-width:650px){
+            width: 45%;
+        }
 
 
         h2{
