--- a/src/scss/_modals.scss
+++ b/src/scss/_modals.scss
@@ -144,6 +144,7 @@
                                         border: none;
                                         font-weight: bolder;
                                         padding: 0px;
+                                        margin: 0px;
                                     }
                                 }
                             }
