--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -14,27 +14,33 @@
 }
 
 .locations_container{
-    @include flexCenter;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 20px;
     width: 98%;
-    max-width: 1200px;
+    max-width: 1100px;
     margin: 0px auto;
     margin-bottom: 75px;
+    
+    @media screen and (min-width:650px){
+        grid-template-columns: 1fr 1fr;
+        
+        .location{
+            max-width: unset;
+        }
+    }
 
     .location{
-        margin: 2.5%;
+        margin: 2.5% auto;
         background: white;
         border-radius: 2.5px;
         min-width: 250px;
-        max-width: 500px;
+        max-width: 550px;
         padding-bottom: 10px;
         width: 100%;
         box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.2);
         border-bottom: 3px solid $green;
 
-        @media screen and (min-width:650px){
-            width: 45%;
-        }
 
 
         h2{
