added further styling to home, footer, houses

--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -39,7 +39,7 @@
     p{
         width: 100%;
         margin: 20px auto;
-        font-size: clamp(15px, 800px, 25px);
+        font-size: clamp(15px, 8vw, 22.5px);
         text-align: justify;
     }
 
