--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -17,7 +17,7 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-gap: 20px;
-    width: 98%;
+    width: 95%;
     max-width: 1100px;
     margin: 0px auto;
     margin-bottom: 75px;
@@ -45,7 +45,7 @@
 
         h2{
             text-align: center;
-            font-size: 20px;
+            font-size: clamp(20px, 20%, 40px);
             margin: 12.5px auto;
         }
 
