--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -2,23 +2,39 @@
 
 
 .difference{
+    width: 95%;
     margin: 30px auto;
     text-align: center;
+
+    @media screen and (min-width: 650px){
+        margin: 40px auto;
+    }
 }
 
 .home_about, .home_houses, .home_apartments{
     @include flexCenter;
-    width: 95%;
+    flex-wrap: wrap;
+    width: 100%;
     max-width: 1200px;
     margin: 0px auto;
 
+    
+    #houses_div{
+        order: 2;    
+    }
+    
+    #houses_img{
+        order: 1;
+    }
+    
     img{
-        width: 50%;
+        width: 100%;
         height: 100%;
-        max-height: 375px;
+        max-height: 400px;
     }
     div{
-        width: 50%;
+        width: 100%;
+        height: 100%;
         padding: 20px;
         h2{
             font-size: 25px;
@@ -28,23 +44,76 @@
             text-align: justify;
             margin: 10px 0px;
         }
-        button{
-            font-size: 17.5px;
-            padding: 5px;
-            background: black;
-            color: white;
-            height: 40px;
-            border-radius: 5px;
-            outline: none;
-            border: none;
-            text-decoration: none;
-            margin-right: 5px;
-            margin-top: 5px;
-            cursor: pointer;
-            
-            &:hover{
-                color: $green;
+        
+        .button_container{
+            @include flexCenter;
+            flex-wrap: wrap;
+            margin: 0px auto;
+            width: 100%;
+
+            button{
+                font-size: 15px;
+                padding: 5px;
+                margin: 2.5px auto;
+                background: black;
+                color: white;
+                border-radius: 5px;
+                outline: none;
+                border: none;
+                text-decoration: none;
+                margin-right: 5px;
+                cursor: pointer;
+                
+                &:hover{
+                    color: $green;
+                }
+                
+                
             }
+        }
+    }
+    @media screen and (min-width: 650px){
+        #houses_div{
+            order: 1;
+            padding: 0px;
+            padding-right: 2.5%;
+            padding-left: 10px;
+        }
+
+        #houses_img{
+            order: 2;
+        }
+
+        div{
+            width: 50%;
+            overflow: hidden;
+            padding: 0px;
+            padding-left: 2.5%;
+            padding-right: 10px;
+
+            h2{
+                font-size: clamp(25px, 2.5vw, 40px);
+            }
+
+            p{
+                font-size: clamp(15px, 1.75vw, 22.5px);
+                margin: 7.5% auto;
+                margin-top: 5%;
+            }
+
+            .button_container{
+                margin: 0px auto;
+                padding: 0px;
+
+                button{
+                    font-size: clamp(15px, 1.75vw, 25px);
+                    padding: 7.5px;
+                }
+            }
+        }
+
+        img{
+            width: 50%;
         }
     }
 }
