--- a/src/scss/_houses.scss
+++ b/src/scss/_houses.scss
@@ -90,7 +90,7 @@
                 border-bottom-color: black;
                 cursor: pointer;
                 position: absolute;
-                top: -20px;
+                top: -16px;
                 left: 50%;
                 transform: translateX(-50%);
             }
@@ -103,9 +103,14 @@
                 width: 100%;
                 text-indent: 10px;
                 margin: 2.5px auto;
-                outline: $green;
-                transition: all .5s ease;
-
+                border: 2px solid black;
+                outline: none;
+                border-radius: 2.5px;
+                // transition: all .5s ease;
+                
+                &:focus{
+                    border: 2px solid $green;
+                }
                 
             }
 
@@ -153,7 +158,7 @@
 
 .home_container{
     display: grid;
-    width: 98%;
+    width: 95%;
     margin: 10px auto;
     grid-template-columns: 1fr;
     max-width: 1200px;
